# weather-data-ingestion

./: .env.example  README.md  docker-compose.yml
api/: tsconfig.json
producer/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
producer/src/: app.py  collector.py  config.py  constants.py  dto.py  logger.py  main.py  mapper.py  message_queue.py  queue.py  schema.py
producer/tests/: mapper_test.py
producer/tests/mocks/: normalized_weather_data.json  weather_data.json
