[project]
name = "producer"
version = "0.1.0"
description = ""
authors = [
    {name = "Lu1z-Gust4v0",email = "gustavo1204.gc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "producer", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
