[project]
name = "producer"
version = "0.1.0"
description = ""
authors = [
    {name = "Lu1z-Gust4v0",email = "gustavo1204.gc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.poetry.scripts]
start = "src.app:main"
test = "pytest:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
